# backupcrawl

./: README.md  backupcrawler.py  backupcrawlrc.json  git_check.py  main.py  pacman_check.py  pyproject.toml
backupcrawl/: __main__.py  backupcrawler.py  crawler.py  crawlresult.py  git_check.py  main.py  pacman_check.py  printer.py  statustracker.py  sync_status.py
backupcrawl/filter/: base.py  git.py  pacman.py  switch.py
