[tool.poetry]
name = "backupcrawl"
version = "0.0.1"
description = "Detect files which are not backed up"
authors = ["Lukas Wölfer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/corrodedHash/backupcrawl"
keywords = ["python3", "backup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Archiving :: Backup",
]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
