[tool.poetry]
name = "backupcrawl"
version = "0.2.5"
description = "Detect files which are not backed up"
authors = ["Lukas Wölfer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/corrodedHash/backupcrawl"
keywords = ["python3", "backup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Archiving :: Backup",
]

[tool.poetry.scripts]
backupcrawl = 'backupcrawl.__main__:main'

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.1"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
